--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -1,8 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!
+{% block title %}A day in
 {% endblock %}
 
 {% block body %}
 	<h1>Je fonctionne</h1>
+
+	
 {% endblock %}
