Formulaire de création Ingrédient + category + unity

--- a/templates/recipes/create.html.twig
+++ b/templates/recipes/create.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Catégorie{% endblock %}
+{% block title %}Recette{% endblock %}
 
 {% block body %}
 <h2>Créer une recette</h2>
