--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -11,14 +11,19 @@
 					Créer une catégorie
 				</a>
 			</li>
-            <li class="nav-item">
+			<li class="nav-item">
 				<a class="nav-link" href=" {{path('recipe_create')}} ">
 					Créer une recette
 				</a>
 			</li>
-            <li class="nav-item">
+			<li class="nav-item">
 				<a class="nav-link" href=" {{path('ingredient_create')}} ">
 					Créer un ingrédient
+				</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href=" {{path('unity_create')}} ">
+					Créer une unité
 				</a>
 			</li>
 		</ul>
