--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -1,32 +1,70 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<a class="navbar-brand" href="/">SymShop</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-
-	<div class="collapse navbar-collapse" id="navbarColor03">
-		<ul class="navbar-nav mr-auto">
-			<li class="nav-item">
-				<a class="nav-link" href=" {{path('category_create')}} ">
-					Créer une catégorie
-				</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href=" {{path('recipe_create')}} ">
-					Créer une recette
-				</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href=" {{path('ingredient_create')}} ">
-					Créer un ingrédient
-				</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href=" {{path('unity_create')}} ">
-					Créer une unité
-				</a>
-			</li>
-		</ul>
-
+	<div class="container-fluid">
+		<a class="navbar-brand" href="/">A day in</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavDropdown">
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="#">Features</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Pricing</a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+						Recettes
+					</a>
+					<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<li>
+							<a class="dropdown-item" href=" {{path('recipe_create')}} ">Créer</a>
+						</li>
+						<li>
+							<a class="dropdown-item" href=" {{path('recipe_showAll')}} ">Voir tout</a>
+						</li>
+					</ul>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+						Catégories
+					</a>
+					<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<li>
+							<a class="dropdown-item" href=" {{path('category_create')}} ">Créer</a>
+						</li>
+						<li>
+							<a class="dropdown-item" href=" {{path('category_showAll')}} ">Voir tout</a>
+						</li>
+					</ul>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+						Ingrédients
+					</a>
+					<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<li>
+							<a class="dropdown-item" href=" {{path('ingredient_create')}} ">Créer</a>
+						</li>
+						<li>
+							<a class="dropdown-item" href=" {{path('ingredient_showAll')}} ">Voir tout</a>
+						</li>
+					</ul>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+						Unités
+					</a>
+					<ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<li>
+							<a class="dropdown-item" href=" {{path('unity_create')}} ">Créer</a>
+						</li>
+						<li>
+							<a class="dropdown-item" href=" {{path('unity_show')}} ">Voir tout</a>
+						</li>
+					</ul>
+				</li>
+			</ul>
+		</div>
 	</div>
 </nav>
