--- a/templates/unity/edit.html.twig
+++ b/templates/unity/edit.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ingrédient
+{% block title %}Unité
 {% endblock %}
 
 {% block body %}
-	<h2>Modifier un ingrédient</h2>
+	<h2>Modifier une unité de mesure</h2>
 
 	{{ form_start(formview) }}
 	{{ form_errors(formview) }}
 	{{ form_widget(formview) }}
 	<button type="submit" class="btn btn-primary">
 		<i class="fas fa-save"></i>
-		Modifier l'ingrédient
+		Modifier l'unité
 	</button>
 
 	{{ form_end(formview) }}
