--- a/templates/ingredient/show.html.twig
+++ b/templates/ingredient/show.html.twig
@@ -17,7 +17,8 @@
 						{{ ingredient.unity.name }}
 					</span>
 				</div>
-				<a href=" {{ path('ingredient_showAll') }} " class="btn btn-danger btn-sm">Retour</a>
+				<a href=" {{ path('ingredient_showAll') }} " class="btn btn-info btn-sm">Retour</a>
+				<a href=" {{ path('ingredient_delete', {'id': ingredient.id }) }} " class="btn btn-danger btn-sm">Supprimer</a>
 			</div>
 		</div>
 	</div>
