--- a/templates/unity/show.html.twig
+++ b/templates/unity/show.html.twig
@@ -21,6 +21,7 @@
 							</span>
 						</div>
 						<a href=" {{ path('unity_edit', {'id': u.id }) }} " class="btn btn-primary btn-sm">Modifier</a>
+						<a href=" {{ path('unity_delete', {'id': u.id }) }} " class="btn btn-danger btn-sm">Supprimer</a>
 					</div>
 				</div>
 			</div>
